--- a/tests/Integration/Entities/Components/custom-element.html
+++ b/tests/Integration/Entities/Components/custom-element.html
@@ -1,12 +1,22 @@
 <script>
-// Define the class for a new element called custom-element
 class CustomElement extends Polymer.Element {
     static get is() { return "custom-element"; }
+
     constructor() {
         super();
         this.textContent = "I'm a custom-element.";
+        this.simpleProperty = "simpleProperty";
+    }
+
+    static get properties() {
+        return {
+            declaredProperty: {
+                type: String,
+                value: "declaredProperty"
+            }
+        };
     }
 }
-// Register the new element with the browser
+
 customElements.define(CustomElement.is, CustomElement);
 </script>
